--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Additional YouTube button styles */
+        .youtube-link-container {
+            margin-top: 30px;
+        }
+
+        .youtube-btn {
+            background: #ff0000 !important; /* YouTube red */
+            font-size: 1.2em !important;
+            padding: 15px 30px !important;
+            margin-top: 20px;
+            animation: pulse 2s infinite;
+        }
+
+        .youtube-btn:hover {
+            background: #cc0000 !important;
+            transform: scale(1.1);
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Floating Background Elements -->
@@ -34,7 +65,6 @@
             <h2 id="question1Text"></h2>
             <button class="cute-btn" onclick="moveButton(this)" id="yesBtn1"></button>
             <button class="cute-btn" onclick="moveButton(this)" id="noBtn1"></button>
-            <!-- CUSTOMIZE: Secret answer text -->
             <div class="secret-answer">
                 <button class="cute-btn special" onclick="showNextQuestion(2)" id="secretAnswerBtn"></button>
             </div>
@@ -43,11 +73,12 @@
         <!-- Second Question (Love Meter) -->
         <div class="question-section hidden" id="question2">
             <h2 id="question2Text"></h2>
-            <!-- Love meter settings: min="0" max="10000" -->
             <div class="love-meter">
                 <input type="range" min="0" max="10000" value="100" class="slider" id="loveMeter">
                 <p>
-                    <span class="love-value-container"><span id="startText"></span> (<span id="loveValue">100</span>%)</span>
+                    <span class="love-value-container">
+                        <span id="startText"></span> (<span id="loveValue">100</span>%)
+                    </span>
                     <span id="extraLove" class="hidden"></span>
                 </p>
             </div>
@@ -61,11 +92,16 @@
             <button class="cute-btn" onclick="moveButton(this)" id="noBtn3"></button>
         </div>
 
-        <!-- CUSTOMIZE: Celebration message -->
+        <!-- Celebration Section with YouTube Button -->
         <div class="celebration hidden" id="celebration">
             <h2 id="celebrationTitle"></h2>
             <p class="celebration-text" id="celebrationMessage"></p>
             <p class="celebration-text" id="celebrationEmojis"></p>
+            <div class="youtube-link-container">
+                <a id="youtubeLink" href="#" target="_blank" class="cute-btn youtube-btn">
+                    <span id="youtubeBtnText"></span>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -74,4 +110,4 @@
     <script src="theme.js"></script>
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
